# PonyC

./: .gitignore  CMakeLists.txt  build.sh
broken/: missingTrait.pony
broken/parser/: lower_case_type.pony  unterminated_string.pony  upper_case_identifier.pony
broken/typechecker/: missing_method.pony  missing_object.pony
correct/parser/: arithmetic.pony  lower_case_identifier.pony  multiple_methods.pony  unterminated_string.pony  upper_case_type.pony
correct/typechecker/: constructor.pony  declare.pony  large_example.pony  maths.pony  method.pony  multiple-methods.pony  new.pony  simple_trait.pony  typeclass.pony  var.pony
cpp/: CMakeLists.txt
cpp/include/: CodeGen.h  Common.h  CompilationUnit.h  CompilationUnit.hpp  Error.h  Lexer.h  Loader.h  Loader.hpp  Parser.h  Primitives.h  TopTypeChecker.h  TraitTypeChecker.h  TypeChecker.h  Typer.h  ast.hpp  code_gen.hpp  common.hpp  error.hpp  lexer.hpp  parser.hpp  type_checker.hpp  typer.hpp
cpp/src/: CMakeLists.txt  CompilationUnit.cc  CompilationUnit.cpp  Lexer.cc  Loader.cpp  Parser.cc  TopTypeChecker.cc  TraitTypeChecker.cc  TypeChecker.cc  common.cpp  error.cpp  lexer.cpp  main.cc  main.cpp  parser.cpp  type_checker.cpp
include/: error.hpp  lexer.hpp  parser.hpp
ponyC/lib/: List.pony
ponyC/lib/primitives/: array.pony  modes.pony  stdint.pony
src/: CMakeLists.txt  lexer.cpp  main.cpp  parser.cpp
test/: Simple.pony  example_syntax.pony  hashmap.pony  match.pony  slist.pony
